implemente los requirimientos del estudiante #3

--- a/src/main/resources/org/example/crapsgame/game-view.fxml
+++ b/src/main/resources/org/example/crapsgame/game-view.fxml
@@ -32,7 +32,8 @@
                   <ImageView fx:id="dice2ImageView" fitHeight="135.0" fitWidth="135.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#onHandleButtonRollTheDice" text="Jugar" />
+            <Button fx:id="rollDiceButton" mnemonicParsing="false" onAction="#onHandleButtonRollTheDice" text="Jugar" />
+             <Button mnemonicParsing="false" text="Nuevo Juego" onAction="#resetGame" />
          </children>
       </VBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="8.0" style="-fx-background-color: #000000;" GridPane.columnSpan="2">
@@ -42,7 +43,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Label>
-            <Button mnemonicParsing="false" style="-fx-background-color: black; -fx-border-color: white; -fx-border-radius: 16; -fx-border-width: 2;" text="?" textFill="WHITE">
+            <Button mnemonicParsing="false" onAction="#onHelpButtonClicked" style="-fx-background-color: black; -fx-border-color: white; -fx-border-radius: 16; -fx-border-width: 2;" text="?" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
